mule-user-guide/v/3.4/testing-connections.adoc
= 测试连接

该功能使您能够测试与外部资源的连接。在Studio中对应用程序进行建模时，您有机会在配置连接器时测试其与Web服务的连接功能。

== 测试与外部资源的连接

当您在Mule应用程序中对流进行建模时，您可能会使用连接器与外部资源（如SaaS提供程序）进行通信。当你配置一个连接器时，所有的细节都可以连接到一个资源 - 用户名，密码，URL--你可能会问自己：我配置了什么我需要能够成功连接？

直到您运行应用程序以查明连接是否正常工作，Anypoint Studio才允许您在建立连接后立即测试连接以确认通信。因此，在模型化流程时，您可以尽早测试连接，从而跨越列表中的一个潜在的运行时错误。

==== 限制

* 请注意通话限制。一些SaaS提供商会限制您可以对服务进行的呼叫次数。每次测试连接时，您都会使用一次服务呼叫。避免过度的连接测试，以免接近您的服务呼叫限制。
* 连接测试功能仅在Studio的Visual Editor中可用。

=== 测试新连接

创建新连接器时，您可以配置所有连接值，然后 - 在您保存之前 - 您可以执行一次单击测试，以确保连接器与资源成功通信。

. 在*Global Elements*标签中，点击*Create New*。
+
image:create_new.png[创建新的]

. 选择其中一个 link:/mule-user-guide/v/3.4/anypoint-connectors[支持连接测试的Anypoint连接器]。
+
[%header%autowidth.spread]
|===
|连接器 |与Studio捆绑在一起
| {Facebook的{1}}是
Google | Google日历 |是的
| Google Spreadsheets  |是的
| Google任务 |是的
| {的Marketo {1}}
| {NetSuite的{1}}
| {Salesforce的{1}}是
| {微{1}}是
| {Zuora的{1}}
|===

. 使用所有必需的连接值配置连接器，最重要的是用户名和密码。由于您正在测试连接，因此您必须输入所有必需的详细信息才能访问资源。
. 确认已选中*Enable DataSense*框（默认情况下已选中）。
. 点击*Test Connection...*
+
image:salesforce_connector.png[salesforce_connector]

.  Studio调用资源并尝试连接。
+
如果成功，Studio将显示一条消息以指示成功。如果不成功，Studio会显示描述连接问题的错误。

. 此时，在创建连接器期间，您可以根据需要随时调整连接器的配置和测试，直到您确认连接成功为止。对连接满意后，点击*OK*保存。
+
[TIP]
如果您不愿意或无法立即解决任何连接问题，则可以_check_ *Enable DataSense*框，然后单击*OK*以保存连接器配置。在禁用DataSense的情况下，单击*OK*时，Mule不会测试连接或检索元数据。

=== 测试现有连接

如果您已经创建了连接器，那么支持连接测试的连接器（请参阅上表）将显示在Studio的*Outline*窗格的*Connections*选项卡中（请参见下图）。

我的Connections选项卡在哪里？

[TIP]
====
如果您在Studio中看不到*Connections*标签，它可能会隐藏或关闭。

. 使用扳手检查Studio窗口左下角的小蓝色*globe icon*（请参阅下图）。点击此图标显示连接标签。
+
image:outline.png[大纲]

. 如果没有地球图标，请点击Studio窗口左下角的*Show View*图标（参见下图）。
+
image:outline2.png[outline2]

. 在出现的菜单中，单击以选择*Connections Explorer*。
. 如果没有此类选择可用，请选择*Other...*
. 在出现的*Show View*面板中，点击展开*MuleSoft*文件夹，然后选择*Connections Explorer*。
. 点击*OK*打开连接标签。
+
image:view_connectors.png[view_connectors]
====

* 连接选项卡中的*Current*视图显示您工作的`.mflow`文件中的所有连接器。换句话说，该视图仅显示活动项目中的连接器。
*  *All*视图显示您的所有Studio项目，并允许您展开每个项目文件以查看每个项目中的连接器。本质上，您可以访问所有Mule项目中的所有连接器（支持连接测试）。
+
image:connections_tab.png[connections_tab]

. 双击*Connections*选项卡中的任意连接器以打开*Properties*面板。
. 点击*Test Connection…*
.  Studio调用资源并尝试连接。如果成功，Studio将显示一条消息以指示成功。如果不成功，Studio会显示描述连接问题的错误。
. 如果不成功，请根据需要调整连接器的配置并进行测试，直到您确认连接成功。对连接满意后，点击*OK*保存。

== 另请参阅

*  link:/mule-user-guide/v/3.4/using-perceptive-flow-design[DataSense感知流程设计]。
